UNRELEASED CHANGES:

* Fix Storage page not being displayed
* Add ability to create tasks that are not linked to any contacts
* Fix avatar display in searches

RELEASED VERSIONS:

v2.10.2 - 2018-11-14
--------------------

* Fix composer install problems
* Fix editing conversations not working
* Fix deletion of relationships not working

v2.10.1 - 2018-11-13
--------------------

* Fix work information not being able to be edited
* Display contacts for each tag in the Tags view on the Settings page

v2.10.0 - 2018-11-11
--------------------

* Add ability to upload documents
* Add ability to archive a contact
* Add right-click support on contact list
* Add autocompletion on tags
* Add CardDAV support — disabled by default. To enable it, toggle the `CARDDAV_ENABLED` env variable.
* Add a command (export:all) to export all data from an instance in SQL
* New header on a profile page
* Standardize phonenumber format while importing vCard
* Set currency and timezone for new users
* Remove changelogs from the database and manage changelogs from a json file instead
* Highlight buttons when selected using keyboard
* Hide deceased people from dashboard's 'Last Consulted' section
* Improve API methods for tag management
* Fix settings' sidebar links and change security icon
* Fix CSV import
* Filter deceased people from people list by default
* Fix errors during PostgreSQL migration
* Better documentation for PostgreSQL users
* Fix some API methods
* API breaking change: Remove 'POST /contacts/:contact_id/pets' in favor of 'POST /pets/' with a 'contact_id'
* API breaking change: Remove 'PUT /contacts/:contact_id/pets/:id' in favor of 'PUT /pets/:id' with a 'contact_id'
* API breaking change: Every validator fails now send a HTTP 400 code (was 200) with the error 32
* API breaking change: Every Invald Parameters errors now send a HTTP 400 (was 500 or 200) code with the error 41
* Use Laravel email verification, and remove the old package used for that